--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "draft-convert": "^2.1.13",
+    "draft-js": "^0.11.7",
     "express": "^4.18.3",
     "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-icons": "^4.11.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^3.5.2"
